# pntr_app_example_build_function

./: .gitignore  CMakeLists.txt  README.md  main.c  pntr_app.c
cmake/: Findpntr.cmake
